class InsurancePlan:
    def __init__(self, id, titre, prix):
        self.id = id
        self.titre = titre
        self.prix = prix